[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/scripts/stabber.gd" type="Script" id=1]
[ext_resource path="res://assets/char/stabby_up1.png" type="Texture" id=2]
[ext_resource path="res://assets/char/stabby_up2.png" type="Texture" id=3]
[ext_resource path="res://assets/char/stabby_up3.png" type="Texture" id=4]
[ext_resource path="res://assets/char/stabby_up4.png" type="Texture" id=5]
[ext_resource path="res://assets/char/stabby_Left1.png" type="Texture" id=6]
[ext_resource path="res://assets/char/stabby_Left2.png" type="Texture" id=7]
[ext_resource path="res://assets/char/stabby_Left3.png" type="Texture" id=8]
[ext_resource path="res://assets/char/stabby_Left4.png" type="Texture" id=9]
[ext_resource path="res://assets/char/stabby_upLeft1.png" type="Texture" id=10]
[ext_resource path="res://assets/char/stabby_upLeft2.png" type="Texture" id=11]
[ext_resource path="res://assets/char/stabby_upLeft3.png" type="Texture" id=12]
[ext_resource path="res://assets/char/stabby_upLeft4.png" type="Texture" id=13]
[ext_resource path="res://assets/char/stabby_down1.png" type="Texture" id=14]
[ext_resource path="res://assets/char/stabby_down2.png" type="Texture" id=15]
[ext_resource path="res://assets/char/stabby_down3.png" type="Texture" id=16]
[ext_resource path="res://assets/char/stabby_down4.png" type="Texture" id=17]
[ext_resource path="res://assets/char/stabby_downLeft1.png" type="Texture" id=18]
[ext_resource path="res://assets/char/stabby_downLeft2.png" type="Texture" id=19]
[ext_resource path="res://assets/char/stabby_downLeft3.png" type="Texture" id=20]
[ext_resource path="res://assets/char/stabby_downLeft4.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "left",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "upLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "down",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "downLeft",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 7.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 12.0

[node name="stabber" type="KinematicBody2D" index="0" groups=[
"enemy",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
health = 3

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

z_index = 1
frames = SubResource( 1 )
animation = "up"
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" index="0"]

shape = SubResource( 3 )

[node name="knockback" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.45
one_shot = false
autostart = false

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="view" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1000 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]

[connection signal="timeout" from="knockback" to="." method="_on_knockback_timeout"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


